[package]
name = "kvs"
version = "0.1.0"
authors = ["yukari"]
edition = "2018"

[env]
RUST_BACKTRACE="full"

[dependencies]
clap = { version = "3.1.12", features = ["derive", "cargo"] }
assert_cmd = "0.11.0"
predicates = "1.0.0"
serde = { version = "1.0.136", features = ["derive"] }
bincode = "1.3.3"
memmap = "0.7.0"
failure = "0.1.8"
failure_derive = "0.1.8"
tempfile = "3.0.7"
sled = "0.34.6"
lockfree = "0.5.1"
rand = "0.8.5"
rayon = "1.5.3"
crossbeam = "0.8.1"
tokio = "1.19.1"
async-bincode = "0.7.0"
futures = "0.3.21"
async-trait = "0.1.56"

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
tempfile = "3.0.7"
walkdir = "2.2.7"
sled = "0.34.6"
panic-control = "0.1.4"
criterion = "0.2.11"
crossbeam-utils = "0.6.5"
tokio = {version = "1.19.1", features = ["full"]}
